[gd_scene load_steps=4 format=3 uid="uid://c8j5uqfmj7ot1"]

[ext_resource type="Script" uid="uid://c0ywl4phxpdna" path="res://scripts/main.gd" id="1_y4r3m"]
[ext_resource type="PackedScene" uid="uid://c6j8vx2x7y0qk" path="res://scenes/levels/level_1.tscn" id="2_n8r7d"]
[ext_resource type="Script" uid="uid://djbqoidc3mmh4" path="res://scripts/ui/main_ui.gd" id="3_lfxvr"]

[node name="Main" type="Node2D"]
script = ExtResource("1_y4r3m")
initial_level = ExtResource("2_n8r7d")

[node name="LevelContainer" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_lfxvr")

[node name="HealthBar" type="ProgressBar" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 50.0
value = 100.0

[node name="ScoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 220.0
offset_bottom = 86.0
text = "Score: 0"

[node name="PauseMenu" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="UI/PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="GameOverPanel" type="Panel" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="QuitButton" type="Button" parent="UI/GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="quit_pressed" from="UI" to="." method="_on_pause_menu_quit"]
[connection signal="restart_pressed" from="UI" to="." method="restart_game"]
[connection signal="resume_pressed" from="UI" to="." method="_on_pause_menu_resume"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/ResumeButton" to="UI" method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI/PauseMenu/VBoxContainer/QuitButton" to="UI" method="_on_quit_button_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/RestartButton" to="UI" method="_on_restart_button_pressed"]
[connection signal="pressed" from="UI/GameOverPanel/VBoxContainer/QuitButton" to="UI" method="_on_quit_button_pressed"]
